# libdl

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  code-coverage.cmake  mnist_problem.cpp  sanitizers.cmake  xor_problem.cpp
docs/: CMakeLists.txt  Doxyfile.in
include/libdl/: Constant.h  Optimizer.h  Variable.h  graph.h  graph_node.h  helper_functions.h  initializer.h  loss.h  math_functions.h  opperation.h  opperation_node.h  placeholder.h  test.h  variable.h  wrapper.h
python/: test.py
python_scripts/: run_all_pairs.py  run_pair.py
src/: CMakeLists.txt  Optimizer.cpp  Variable.cpp  graph.cpp  graph_node.cpp  helper_functions.cpp  initializer.cpp  loss.cpp  math_functions.cpp  opperation.cpp  placeholder.cpp  py_binding.cpp  test.cpp  variable.cpp
tests/: mainTest.cpp  test_Optimizer.cpp  test_constant.cpp  test_graph.cpp  test_graph_node.cpp  test_helper_functions.cpp  test_initializer.cpp  test_loss.cpp  test_math_functions.cpp  test_opperation.cpp  test_opperation_node.cpp  test_placeholder.cpp  test_variable.cpp  trytest.cpp
